--- a/lessons.html
+++ b/lessons.html
@@ -20,39 +20,32 @@ description: Each of our lessons is custom-designed by one of our staff members 
 
     <script language="JavaScript">
       var lessons = [
-        // ["a_handful_of_fun", "A Handful of Fun", "A handful of applications of bioengineering and prostheses.", "misc"],
-        ["who_dunnit", "Who Dunnit?", "Learn about the science behind applications of forensic science, such as fingerprinting.", "current biology"],
-        ["wheel_deal", "BEAM is the Wheel Deal!", "Methods of producing cars in factories, how cars are powered, and self-driving cars.", "current misc"],
-        ["beam_builder", "BEAM the Builder", "Learning about the basic structural elements of buildings and building their own.", "current physics"],
-        ["recipe_for_life", "The Recipe for Life", "The structure of DNA, DNA extraction, and genetic traits.", "current misc"],
-        ["jumping_into_beam", "Jumping Into BEAM", "Learn how our musculoskeletal system helps us move!", "current biology"],
-        ["cryptography_scramble", "Elcome-way otay EAMBay!", "Learning how we can encode our message with secret patterns", "misc"],
-        ["beam_will_rock_you", "BEAM Will Rock You", "The science of rocks, and the processes happening under our feet.", "chemistry"],
-        // ["oh_buoy", "Oh Buoy!", "Use hands-on demos and modules to give students a deep understanding of density.", "physics"],
-        // ["we_belung_together", "We Be-Lung Together", "Learn about the lungs and the importance of our respiratory system.", "biology"],
-        // ["drop_it_like_its_hot", "Drop It Like It's Hot", "Introduce students to the concepts of force and impact.", "physics"],
-        // ["watts_up", "Watt's Up?", "Create circuits, explore electricity, and build your own robot.", "physics"],
-        // ["rollercoasters", "Marble Rollercoasters", "Introduce the concepts of potential and kinetic energy.", "physics"],
+        ["a_handful_of_fun", "A Handful of Fun", "A handful of applications of bioengineering and prostheses.", "misc"],
+        ["oh_buoy", "Oh Buoy!", "Use hands-on demos and modules to give students a deep understanding of density.", "physics"],
+        ["we_belung_together", "We Be-Lung Together", "Learn about the lungs and the importance of our respiratory system.", "biology"],
+        ["drop_it_like_its_hot", "Drop It Like It's Hot", "Introduce students to the concepts of force and impact.", "physics"],
+        ["watts_up", "Watt's Up?", "Create circuits, explore electricity, and build your own robot.", "physics"],
+        ["rollercoasters", "Marble Rollercoasters", "Introduce the concepts of potential and kinetic energy.", "physics"],
         ["blast_off_with_beam", "Blast off With BEAM", "Introduce students to the fundamentals of rockets and propulsion.", "physics"],
-        // ["catapults", "Catapulting into BEAM", "Learn about simple kinematics and projectile motion.", "physics"],
-        // ["blue_gene_baby", "Blue Gene Baby", "Explore the topics of genetics and DNA.", "biology"],
-        // ["get_pumped", "Get Pumped!", "Discover the crossover between physics and biology in the cardiovascular system.", "biology"],
-        // ["i_heart_beam", "I Heart BEAM", "Learn about the cardiovascular system, and build your own heart valve!", "biology"],
-        // ["cryptography", "Cryptography", "Crack a murder mystery by solving various ciphers.", "misc"],
-        // ["sugar_rush", "Sugar Rush", "Spend some time exploring how sweet nutrition can be!", "biology"],
-        // ["miraculin", "When Life Gives You Lemons...", "Explore the science behind taste.", "misc"],
-        // ["its_not_my_fault", "It’s Not my Fault!", "Explore the challenges of building earthquake-proof structures.", "physics"],
-        // ["seas_get_degrees", "Seas Get Degrees", "Learn about the ocean and its inhabitants as well as the effects of human activity on the ocean's ecosystem.", "biology"],
+        ["catapults", "Catapulting into BEAM", "Learn about simple kinematics and projectile motion.", "physics"],
+        ["blue_gene_baby", "Blue Gene Baby", "Explore the topics of genetics and DNA.", "biology"],
+        ["get_pumped", "Get Pumped!", "Discover the crossover between physics and biology in the cardiovascular system.", "biology"],
+        ["i_heart_beam", "I Heart BEAM", "Learn about the cardiovascular system, and build your own heart valve!", "biology"],
+        ["cryptography", "Cryptography", "Crack a murder mystery by solving various ciphers.", "misc"],
+        ["sugar_rush", "Sugar Rush", "Spend some time exploring how sweet nutrition can be!", "biology"],
+        ["miraculin", "When Life Gives You Lemons...", "Explore the science behind taste.", "misc"],
+        ["its_not_my_fault", "It’s Not my Fault!", "Explore the challenges of building earthquake-proof structures.", "physics"],
+        ["seas_get_degrees", "Seas Get Degrees", "Learn about the ocean and its inhabitants as well as the effects of human activity on the ocean's ecosystem.", "biology"],
         ["snap_out_of_it", "Snap Out of It", "A quick introduction to the fundamental ideas and concepts of computer science.", "misc"],
-        // ["big_beam_energy", "Big Beam Energy", "Explore several forms of renewable energy.", "misc"],
-        ["beam-takes-flight", "BEAM Takes Flight!", "Learn about the forces of flight!", "physics"],
-        // ["let-there-be-light", "Let There be Light!", "Explore the different properties of light.", "current physics"],
-        // ["rain-go-away", "Rain, Rain Go Away", "Introduce the concepts and phenomena behind our weather.", "current misc"],
-        // ["the-sixth-senses", "The Sixth Sense(s)", "Discover the senses beyond our 5 basic ones!", "current misc"],
-        // ["to-infinity-and-beyond", "To Infinity and Beyond!", "Discover what lies beyond our Earth.", "current misc"],
-        // ["acid-base-chemistry", "Bubble, Fizzle, Pop!", "Discover the science behind chemical reactions.", "chemistry"],
-        // ["water-we-doing", "Water We Doing?", "Explore the different properties of water.", "chemistry"],
-        // ["UnbelievaBUBBLE", "UnbelievaBUBBLE", "Learn more about geometry and surface tension by playing with bubbles!", "chemistry"]
+        ["big_beam_energy", "Big Beam Energy", "Explore several forms of renewable energy.", "misc"],
+        ["beam-takes-flight", "BEAM Takes Flight!", "Learn about the forces of flight!", "current physics"],
+        ["let-there-be-light", "Let There be Light!", "Explore the different properties of light.", "current physics"],
+        ["rain-go-away", "Rain, Rain Go Away", "Introduce the concepts and phenomena behind our weather.", "current misc"],
+        ["the-sixth-senses", "The Sixth Sense(s)", "Discover the senses beyond our 5 basic ones!", "current misc"],
+        ["to-infinity-and-beyond", "To Infinity and Beyond!", "Discover what lies beyond our Earth.", "current misc"],
+        ["acid-base-chemistry", "Bubble, Fizzle, Pop!", "Discover the science behind chemical reactions.", "chemistry"],
+        ["water-we-doing", "Water We Doing?", "Explore the different properties of water.", "chemistry"],
+        ["UnbelievaBUBBLE", "UnbelievaBUBBLE", "Learn more about geometry and surface tension by playing with bubbles!", "chemistry"]
 
 
 
@@ -152,12 +145,12 @@ document.getElementById("start").click();
 
 
       var lessons = [
-        ["oil_i_need", "You're Oil I Need", "Ruth Acty A (Spring 2022)", "Introduction on fundamental crude concepts of oil, what oil is, how it's made, where it originates from, how to drill oil, and how to effectively clean oil spills"],
-        ["chem_1a", "Chem 1A", "Harding A (Spring 2022)", "An intro to chemistry, featuring molecules, forces, and acids/bases."],
-        ["evidence_of_evolution", "Evidence of Evolution", "Stewart D (Spring 2022)", "The basics of evolutionary process and evidence of evolution."],
-        ["quit_overreacting", "Quit Overreacting!", "Maynard A (Fall 2021)", "The differences between physical and chemical reactions, components of a solution, and how viscosity affects non-Newtonian fluids."],
-        ["take_a_chance", "Take a Chance", "Harding A (Fall 2021)", "The basics of statistics, the science of decision-making and uncertainty, and applications of statistics in real life, like sampling populations and analyzing characteristics."],
-        ["going_viral", "BEAM's Going Viral!", "Harding A (Spring 2021)", "Discover what viruses are and how diseases spread."]
+        ["a_scientific_feast", "A Scientific Feast", "Maynard A (Fall 2019)", "Take a sneak peek into the world of molecular gastronomy and learn how certain foods are made."],
+        ["all_about_the_solar_system", "All About the Solar System", "Oxford B (Fall 2018)", "A fun introduction to astronomy and physics, with a focus on satellite and spaceship design."],
+        ["climate_change", "Climate Change -- Watery Going to Do?", "Eres A (Fall 2018)", "Combat climate change with resource management and sustainable energy."],
+        ["how_to_make_people_pill_better", "How to Make People Pill Better", "Thousand Oaks A (Fall 2019)", "Explore the conditions that influence and affect the design and development of medicine"],
+        ["please_date_me", "Please Date Me", "Washington (Fall 2019)", "Discover techinques that paleontologists use to understand the history of life on Earth."],
+        ["the_cardiovascular_system", "The Ins and Outs of the Cardiovascular System", "Emerson (Fall 2018)", "Learn about the various components of the cardiovascular system."]
         //["shake_it_up", "Shake It Up!", "Longfellow B: Learn about the engineering behind earthquake damage prevention."]
       ];
 
