--- a/calendar.html
+++ b/calendar.html
@@ -139,11 +139,13 @@ description: In addition to visiting our local elementary and middle schools wee
 
 <script>
   const data = [
-  { dateLabel: 'Wed 8/24', title: 'Fall 2022 Semester Begins' },
-  { dateLabel: 'Tue 9/06', title: 'Info Session + Decal Apps Released' },
-  { dateLabel: 'Fri 9/10', title: 'Applications Due @ 12PM' },
-  { dateLabel: 'Mon 9/12', title: 'Decal #1' },
-  { dateLabel: 'Sat 9/17', title: 'Mentor Orientation' },
+  { dateLabel: 'Sun 3/08', title: 'Splash' },
+  { dateLabel: 'Mon 3/09', title: 'Mini U' },
+  { dateLabel: 'Wed 3/18', title: 'Science Night' },
+  { dateLabel: 'TBA', title: 'Bats @ Zoo' },
+  { dateLabel: 'Sat 4/11', title: 'Berkeley Project' },
+  { dateLabel: 'Thu 4/16', title: 'Maker Faire' },
+  { dateLabel: 'Sat 4/18', title: 'Cal Day' }
   ];
 
   new Vue({
