Updated final lesson plans

--- a/lessons.html
+++ b/lessons.html
@@ -145,12 +145,12 @@ document.getElementById("start").click();
 
 
       var lessons = [
-        ["a_scientific_feast", "A Scientific Feast", "Maynard A (Fall 2019)", "Take a sneak peek into the world of molecular gastronomy and learn how certain foods are made."],
-        ["all_about_the_solar_system", "All About the Solar System", "Oxford B (Fall 2018)", "A fun introduction to astronomy and physics, with a focus on satellite and spaceship design."],
-        ["climate_change", "Climate Change -- Watery Going to Do?", "Eres A (Fall 2018)", "Combat climate change with resource management and sustainable energy."],
+        ["going_viral", "BEAM's Going Viral!", "Harding A (Spring 2021)", "Take a sneak peek into the world of epidemiology and learn how diseases spread."],
+        ["take_a_chance", "Take a Chance!", "Harding A (Fall 2021)", "A fun introduction to statistics and probability, and its application to everyday life."],
+        ["quit_overreacting", "Quit Overreacting!!", "Maynard A (Fall 2021)", "Learn about the differences between physical and chemical reactions!"],
         ["how_to_make_people_pill_better", "How to Make People Pill Better", "Thousand Oaks A (Fall 2019)", "Explore the conditions that influence and affect the design and development of medicine"],
-        ["please_date_me", "Please Date Me", "Washington (Fall 2019)", "Discover techinques that paleontologists use to understand the history of life on Earth."],
-        ["the_cardiovascular_system", "The Ins and Outs of the Cardiovascular System", "Emerson (Fall 2018)", "Learn about the various components of the cardiovascular system."]
+        ["chem_1a", "Chem 1A", "Harding A (Spring 2022)", "Dive into the exciting world of chemistry and learn about molecular properties."],
+        ["oil_i_need", "You're Oil I Need", "Ruth Acty A (Spring 2022)", "Learn about the fundamental concepts of crude oil and how to clean on oil spill."]
         //["shake_it_up", "Shake It Up!", "Longfellow B: Learn about the engineering behind earthquake damage prevention."]
       ];
 
