--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ description: Berkeley Engineers and Mentors
 	<div class="content" style="flex-direction: row; padding-right: 8%; padding-left: 10%;">
 	<a name="target"></a>
 	<section>
+		<p>Our application has now been released and is due Friday, January 27th at 11:59PM PST! Please apply <a href="https://tinyurl.com/beamsp23">here</a></p>
 		<div class="container flex">
 			<div class="text editable">
 				<h2 class="header">Who We Are</h2>
