Changing indent of app link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ description: Berkeley Engineers and Mentors
 	<div class="content" style="flex-direction: row; padding-right: 8%; padding-left: 10%;">
 	<a name="target"></a>
 	<section>
-		<p>Our application has now been released and is due Friday, January 27th at 11:59PM PST! Please apply <a href="https://tinyurl.com/beamsp23">here</a></p>
+		<div style = "font-size: 30px">
+		<p style = "margin-left: 20px">Our application has now been released and is due Friday, January 27th at 11:59PM PST! Please apply <a href="https://tinyurl.com/beamsp23">here</a></p>
+		</div>
 		<div class="container flex">
 			<div class="text editable">
 				<h2 class="header">Who We Are</h2>
