--- a/join.html
+++ b/join.html
@@ -15,32 +15,33 @@ description:
       and engineering with the local community!
     </h2>
     <!-- Next 4 lines are for AFTER Aplication season -->
+  <!--
    <a href="#app">We accept mentor applications at the beginning of each semester.</a>
     <p><strong>Spring 2022 applications are now closed</strong> but feel free to add
       your email below or follow us on <a target=_blank
         href="https://www.facebook.com/beam.teach/">Facebook</a> to receive information about our Fall 2022 infosession/application.</p>
-
+  -->
 
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
-        <!--
+       
           <p>
-            For interested <strong>Spring 2022 mentors</strong>,
+            For interested <strong>Spring 2023 mentors</strong>,
             stop by at our infosession for application information!
           </p>
 
           <p>
-  					<a target=_blank href="https://docs.google.com/forms/d/e/1FAIpQLScBKVYOXG_rKVufm-odKAiT2UBjv6n4GyVvKg3tjhyHiUeJFg/viewform">
-            BEAM Spring 2022 Application </a>.<br>
-            Due Friday, February 4th at NOON (12pm PST)!
+  					<a target=_blank href="https://tinyurl.com/beamsp23">
+            BEAM Spring 2023 Application </a>.<br>
+            Due Friday, January 27th at 11:59PM PST!
           </p>
 
           <p>
   					<strong>BEAM Infosession</strong> <br>
-            Tuesday January 31st 7:00pm <br>
-            Anthropology and Art Practice Building<br>
-            Room 160<br>
+            Wednesday January 25th 8:00pm <br>
+            Latimer 120<br>
           </p>
 
+          <!--
           <p> More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/">Facebook</a> page.
             Follow us or add your email in the form below to stay updated!
@@ -70,7 +71,8 @@ description:
   <!--
   <img style="width: 25vw; height: 25vw;" src="/images/join1.png">
   -->
-  <img style="width: 42vw; height: 28vw;" src="/images/Beam_Sp22_Front_.png">
+  <!-- <img style="width: 42vw; height: 28vw;" src="/images/Beam_Sp22_Front_.png">
+  -->
 
 
 
