--- a/join.html
+++ b/join.html
@@ -31,7 +31,7 @@ description:
 
           <p>
   					<a target=_blank href="https://tinyurl.com/beamsp23">
-            BEAM Spring 2023 Application </a>.<br>
+            BEAM Spring 2023 Application (here) </a>.<br>
             Due Friday, January 27th at 11:59PM PST!
           </p>
 
@@ -41,12 +41,10 @@ description:
             Latimer 120<br>
           </p>
 
-          <!--
           <p> More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/">Facebook</a> page.
             Follow us or add your email in the form below to stay updated!
           </p>
-          -->
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
       style="display:flex; flex-wrap:wrap;">
