--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: Berkeley Engineers and Mentors
 	<a name="target"></a>
 	<section>
 		<div style = "font-size: 23px">
-		<p style = "margin-left: 28px">Our application will be released here on Tuesday, September 5 and will close on Friday, September 8. </p>
+		<p style = "margin-left: 28px">Our application will be released here on Tuesday, September 5 and will close on Friday, September 8 at 11:59PM PST! </p>
 		</div>
 		<div class="container flex">
 			<div class="text editable">
