--- a/join.html
+++ b/join.html
@@ -25,25 +25,26 @@ description:
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
        
           <p>
-            For interested <strong>Spring 2023 mentors</strong>,
+            For interested <strong>Fall 2023 mentors</strong>,
             stop by at our infosession for application information!
           </p>
 
           <p>
-  					<a target=_blank href="https://tinyurl.com/beamsp23">
-            BEAM Spring 2023 Application (here) </a>.<br>
-            Due Friday, January 27th at 11:59PM PST!
+  					<a target=_blank href="https://tinyurl.com/f23BEAMapp">
+            BEAM Fall 2023 Application (here) </a>.<br>
+            Due Friday, September 8th at NOON (11:59 AM PST)!
           </p>
 
           <p>
   					<strong>BEAM Infosession</strong> <br>
-            Wednesday January 25th 8:00pm <br>
+            Tuesday, September 5th - 8:00 PM PST <br>
             Latimer 120<br>
           </p>
 
           <p> More details are available on our <a target=_blank
-            href="https://www.facebook.com/beam.teach/">Facebook</a> page.
-            Follow us or add your email in the form below to stay updated!
+            href="https://www.facebook.com/beam.teach/">Facebook</a> and
+            <a target=_blank href="https://www.instagram.com/beam_berkeley/?hl=en">Instagram</a>
+            page. Follow us or add your email in the form below to stay updated!
           </p>
 
     <form action="http://formspree.io/beam.teach@gmail.com" method="post" class="contact-form"
