Update join.html spring 2024

--- a/join.html
+++ b/join.html
@@ -25,19 +25,18 @@ description:
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
        
           <p>
-            For interested <strong>Fall 2023 mentors</strong>,
+            For interested <strong>Spring 2024 mentors</strong>,
             stop by at our infosession for application information!
           </p>
 
           <p>
-  					<a target=_blank href="https://tinyurl.com/f23BEAMapp">
-            BEAM Fall 2023 Application (here) </a>.<br>
-            Due Friday, September 8th at NOON (11:59 AM PST)!
+  					Our spring 2024 application will be released immediately
+            after our infosession!
           </p>
 
           <p>
   					<strong>BEAM Infosession</strong> <br>
-            Tuesday, September 5th - 8:00 PM PST <br>
+            Wednesday, January 24th - 8:00 PM PST <br>
             Latimer 120<br>
           </p>
 
