Very temporary test change to see if this gets updated

--- a/about.html
+++ b/about.html
@@ -294,7 +294,7 @@ description:
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
             //2019 execs: Abby, Stephanie Z, Nikki, Sophie, Jocelyn, Nico, Brendan, Tiffany, Kelvin
             var data = [['Aaron He', 'ChemE 2021', 'Director of Site Leading', 'aaron'],
-            ['Abby Cheng', 'ChemE 2021', 'Director of Logistics', 'abby'],
+            ['Aditya Murali', 'BioE 2024', 'Director of Site Leading', 'abby'],
             ['Andrew Shih', 'MCB & Data Science 2023', 'Outreach, Site Leading', 'andrew'],
             ['Ankur Jain', 'EECS & Business 2021', 'Logistics, Site Leading', 'ankur'],
             ['Austin Nguyen', 'MechE 2022', 'Director of Logistics', 'austin'],
