--- a/about.html
+++ b/about.html
@@ -292,52 +292,61 @@ description:
         <script>
             //List of all staff members.
             //[Name, Major/Yr, Committees, img filename (place in image folder, no file extension necessary)]
-            //2019 execs: Abby, Stephanie Z, Nikki, Sophie, Jocelyn, Nico, Brendan, Tiffany, Kelvin
-            var data = [['Aaron He', 'ChemE 2021', 'Director of Site Leading', 'aaron'],
-            ['Aditya Murali', 'BioE 2024', 'Director of Site Leading', 'abby'],
-            ['Andrew Shih', 'MCB & Data Science 2023', 'Outreach, Site Leading', 'andrew'],
-            ['Ankur Jain', 'EECS & Business 2021', 'Logistics, Site Leading', 'ankur'],
-            ['Austin Nguyen', 'MechE 2022', 'Director of Logistics', 'austin'],
-            ['Brandon Zhong', 'Data Science 2021', 'Logistics, Mentor Development', 'brandon'],
-            ['Brendan Tsuda', 'Chemical Biology 2021', 'Director of Site Leading', 'brendan'],
-            ['Cammie Young', 'Public Health 2021', 'Director of Mentor Development', 'cammie'],
-            ['Dana Yang', 'Applied Math & CS 2022', 'Curriculum, External Affairs', 'dana'],
-            ['Darren Omori', 'CS 2021', 'External Affairs, Logistics', 'darren'],
-            ['David Paner', 'CS 2021', 'Director of Curriculum', 'david'],
-            ['Elizabeth Greenberg', 'ChemE 2022', 'President', 'elizabeth'],
-            ['Evan Chin', 'ChemE 2021', 'Director of Curriculum', 'evan'],
-            ['Francesca Tinga', 'ChemE 2021', 'Mentor Development, Site Leading', 'francesca'],
-            ['Gabby Lau', 'IEOR 2021', 'External Affairs, Site Leading', 'gabby'],
-            ['Ishan Gurnani', 'Applied Math 2022', 'Outreach, Site Leading', 'ishan'],
-            ['Jessica Choy', 'IB 2021', 'Curriculum, Site Leading', 'jessica'],
-            ['John John Huddleston', 'MechE 2022', 'Outreach, Site Leading', 'john-john'],
-            ['Kahini Achrekar', 'Cognitive Science 2021', 'External Affairs, Site Leading', 'kahini'],
-            ['Krish Nayar', 'BioE 2021', 'Outreach, Site Leading', 'krish'],
-            ['Kyle Kishimoto', 'Math (Teaching) 2023', 'Logistics, Mentor Development', 'kyle'],
-            ['Marisa Wong', 'MCB 2022', 'Logistics, Outreach', 'marisa'],
-            ['Matthew Cuan', 'IB 2022', 'Director of External Affairs', 'matthew'],
-            ['Minji Lee', 'Chemistry 2022', 'Curriculum, Logistics', 'minji'],
-            ['Monica Cao', 'Nutritional Sciences 2022', 'Curriculum, Mentor Development', 'monica'],
-            ['Neil Kamdar', 'CS 2023', 'Curriculum, Site Leading', 'neil'],
-            ['Nico Carballal', 'MechE 2021', 'President', 'nico'],
-            ['Nicole Xu', 'MCB 2021', 'External Affairs, Site Leading', 'nicolex'],
-            ['Nicole Zhu', 'CS & Statistics 2021', 'Logistics, Mentor Development', 'nicolez'],
-            ['Prashant Malyala', 'CS 2022', 'Director of External Affairs', 'prashant'],
-            ['Priyanka Kannabran', 'MCB 2022', 'Outreach, Site Leading', 'priyanka'],
-            ['Ryan Dai', 'MSE 2022', 'Mentor Development, Outreach', 'ryan'],
-            ['Samhita Katteri', 'Cognitive Science 2022', 'Mentor Development, Site Leading', 'samhita'],
-            ['Sophia Wang', 'MCB & Business 2022', 'Curriculum, Logistics', 'sophia'],
-            ['Summer Bui', 'MCB 2021', 'Director of Outreach', 'summer'],
-            ['Zach Huang', 'CS 2022', 'Curriculum, Logistics', 'zach'],
-            ['Zoe Ko', 'Physics & Data Science 2023', 'Mentor Development, Outreach', 'zoe']];
+            //2023 execs: Aditya, Kaitlyn, Nicole, Emily, Gaby, Akshara, Lucy, Safaa, Rishi, Ashley
+            var data = [
+                ['Adithya Sagar', '2025', 'External Affairs | Outreach', 'white'],
+                ['Aditya Murali', 'BioE 2024', 'Exec Head of Site Leading', 'white'],
+                ['Akshara Vykunta', 'MCB 2023', 'Exec Head of Logistics', 'akshara'],
+                ['Alyssa Chang', 'MCB 2025', 'Site Leading | Outreach', 'alyssa'],
+                ['Andrew Shih', 'MCB & Data Science 2023', 'Site Leading', 'andrew'],
+                ['Angela Shu', '2024', 'External Affairs | Menter Development', 'white'],
+                ['Apollo Loh', 'EECS & Philosophy 2026', 'External Affairs | Logistics', 'apollo'],
+                ['Ashley Kaya', 'Microbial Biology 2025', 'Exec Head of External Affairs', 'ashley'],
+                ['Bradley Louie', '2026', 'Logistics | Mentor Development', 'white'],
+                ['Carina Kim', 'Architecture + Linguistics 2025', 'Site Leading | Mentor Development', 'carina'],
+                ['Cassandra Davis', '2025', 'Site Leading | Mentor Development', 'cassie'],
+                ['Destiny Ogu', 'MCB + Data Science 2025', 'Site Leading | Logistics', 'destiny'],
+                ['Ekansh Agrawal', 'MCB 2025', 'Site Leading | Mentor Development', 'ekansh'],
+                ['Ella Kasamis', 'BioE 2026', 'Curriculum | Logistics', 'ella'],
+                ['Emily Yepez', '2025', 'Exec Head of Mentor Development', 'white'],
+                ['Gaby Tan', 'MEB 2024', 'Exec Head of Logistics', 'white'],
+                ['Grace Xie', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'grace'],
+                ['Hailey Adams', 'MCB 2024', 'Site Leading | Outreach', 'hailey'],
+                ['Hannah Cho', '2025', 'External Affairs | Outreach', 'white'],
+                ['Jacob Yim', 'Computer Science 2023', 'Site Leading | Curriculum', 'jacob'],
+                ['Jared Puerta', 'Computer Science 2024', 'President', 'jared'],
+                ['Johnny Luu', 'MCB 2024', 'Curriculum | Outreach', 'johnny'],
+                ['Kaitlyn Wang', '2024', 'Exec Head of Site Leading', 'white'],
+                ['Kayla Lowenberg', 'MechE 2026', 'Site Leading | Logistics', 'kayla'],
+                ['Kenneth Suhaili', '2023', 'Site Leading | Logisitcs', 'white'],
+                ['Lucy Gleeson', 'ChemE 2024', 'Exec Head of Curriculum', 'lucy'],
+                ['Makenna Leung', 'Anthropology 2025', 'Site Leading | External Affairs', 'makenna'],
+                ['Marine Lyden', 'MCB + Public Policy 2025', 'Site Leading | Mentor Development', 'marine'],
+                ['Mason Earhart', 'Chemistry 2024', 'Curriculum | Logistics', 'mason'],
+                ['Meisen Wang', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'meisen'],
+                ['Michelle Jeong', 'Material Science Engineering 2026', 'Site Leading | Outreach', 'michelle'],
+                ['Mira Chatrathi', 'Data Science 2026', 'Site Leading | Mentor Development', 'mira'],
+                ['Natalie Hoang', 'IEOR 2026', 'Logistics | Outreach', 'natalie'],
+                ['Nicole Xin', '2024', 'Exec Head of Mentor Development', 'white'],
+                ['Patricia Suwardi', 'Data Science 2025', 'Curriculum | External Affairs', 'white'],
+                ['Rebecca Bernstein', '2025', 'Curriculum | Outreach', 'rebecca'],
+                ['Rishi Yang', 'Computer Science 2024', 'Exec Head of Outreach', 'white'],
+                ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'white'],
+                ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'External Affairs | Curriculum', 'shlok'],
+                ['Sunay Dagli', 'EECS 2023', 'External Affairs | Logistics', 'sunay'],
+                ['Surabhi Haniyur', '2024', 'President', 'white'],
+                ['Victoria Jauregui', '2024', 'Site Leading | Mentor Development', 'white'],
+                ['Ysabelle Sibley', '2025', 'Curriculum | Outreach', 'white'],
+                ['Zachary Liu', 'MechE 2025', 'External Affairs | Logistics', 'zachary']
+            ];
             //Categories to sort by. In this case, sort by year.
             var sortCategories = [
                 "President",
-                "Director",
-                "2021",
-                "2022",
+                "Exec",
                 "2023",
-                "2024"
+                "2024",
+                "2025",
+                "2026"
             ];
             var htmlExpr = '<div class=\"container-row\">';
 
@@ -355,7 +364,7 @@ description:
                         //Committees
                         htmlExpr += '<h4>' + data[i][2] + '</h4></div>';
                         //Display image
-                        htmlExpr += '<img src=../images/2020_2021staff/' + data[i][3] + '.jpg id=staff-pic></div>';
+                        htmlExpr += '<img src=../images/2023_2024staff/' + data[i][3] + '.jpg id=staff-pic></div>';
                     }
                 }
             }
