updated some people photos from white to true photos

--- a/about.html
+++ b/about.html
@@ -312,7 +312,7 @@ description:
                 ['Gaby Tan', 'MEB 2024', 'Exec Head of Logistics', 'white'],
                 ['Grace Xie', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'grace'],
                 ['Hailey Adams', 'MCB 2024', 'Site Leading | Outreach', 'hailey'],
-                ['Hannah Cho', '2025', 'External Affairs | Outreach', 'white'],
+                ['Hannah Cho', '2025', 'External Affairs | Outreach', 'hannah'],
                 ['Jacob Yim', 'Computer Science 2023', 'Site Leading | Curriculum', 'jacob'],
                 ['Jared Puerta', 'Computer Science 2024', 'President', 'jared'],
                 ['Johnny Luu', 'MCB 2024', 'Curriculum | Outreach', 'johnny'],
@@ -330,7 +330,7 @@ description:
                 ['Nicole Xin', '2024', 'Exec Head of Mentor Development', 'white'],
                 ['Patricia Suwardi', 'Data Science 2025', 'Curriculum | External Affairs', 'white'],
                 ['Rebecca Bernstein', '2025', 'Curriculum | Outreach', 'rebecca'],
-                ['Rishi Yang', 'Computer Science 2024', 'Exec Head of Outreach', 'white'],
+                ['Rishi Yang', 'Computer Science 2024', 'Exec Head of Outreach', 'rishi'],
                 ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'white'],
                 ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'External Affairs | Curriculum', 'shlok'],
                 ['Sunay Dagli', 'EECS 2023', 'External Affairs | Logistics', 'sunay'],
