--- a/about.html
+++ b/about.html
@@ -312,7 +312,7 @@ description:
                 ['Gaby Tan', 'MEB 2024', 'Exec Head of Logistics', 'white'],
                 ['Grace Xie', 'MCB + Data Science 2026', 'Site Leading | Curriculum', 'grace'],
                 ['Hailey Adams', 'MCB 2024', 'Site Leading | Outreach', 'hailey'],
-                ['Hannah Cho', '2025', 'External Affairs | Outreach', 'hannah'],
+                ['Hannah Cho', 'Legal Studies 2025', 'External Affairs | Outreach', 'hannah'],
                 ['Jacob Yim', 'Computer Science 2023', 'Site Leading | Curriculum', 'jacob'],
                 ['Jared Puerta', 'Computer Science 2024', 'President', 'jared'],
                 ['Johnny Luu', 'MCB 2024', 'Curriculum | Outreach', 'johnny'],
