--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@ description:
             //2023 execs: Aditya, Kaitlyn, Nicole, Emily, Gaby, Akshara, Lucy, Safaa, Rishi, Ashley
             var data = [
                 ['Adithya Sagar', '2025', 'External Affairs | Outreach', 'white'],
-                ['Aditya Murali', 'BioE 2024', 'Exec Head of Site Leading', 'white'],
+                ['Aditya Murali', 'BioE 2024', 'Exec Head of Site Leading', 'aditya'],
                 ['Akshara Vykunta', 'MCB 2023', 'Exec Head of Logistics', 'akshara'],
                 ['Alyssa Chang', 'MCB 2025', 'Site Leading | Outreach', 'alyssa'],
                 ['Andrew Shih', 'MCB & Data Science 2023', 'Site Leading', 'andrew'],
@@ -328,13 +328,13 @@ description:
                 ['Mira Chatrathi', 'Data Science 2026', 'Site Leading | Mentor Development', 'mira'],
                 ['Natalie Hoang', 'IEOR 2026', 'Logistics | Outreach', 'natalie'],
                 ['Nicole Xin', '2024', 'Exec Head of Mentor Development', 'white'],
-                ['Patricia Suwardi', 'Data Science 2025', 'Curriculum | External Affairs', 'white'],
+                ['Patricia Suwardi', 'Data Science 2025', 'Curriculum | External Affairs', 'pattyice'],
                 ['Rebecca Bernstein', '2025', 'Curriculum | Outreach', 'rebecca'],
                 ['Rishi Yang', 'Computer Science 2024', 'Exec Head of Outreach', 'rishi'],
                 ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'white'],
                 ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'External Affairs | Curriculum', 'shlok'],
                 ['Sunay Dagli', 'EECS 2023', 'External Affairs | Logistics', 'sunay'],
-                ['Surabhi Haniyur', '2024', 'President', 'white'],
+                ['Surabhi Haniyur', '2024', 'President', 'surabhi'],
                 ['Victoria Jauregui', '2024', 'Site Leading | Mentor Development', 'white'],
                 ['Ysabelle Sibley', '2025', 'Curriculum | Outreach', 'ysabelle'],
                 ['Zachary Liu', 'MechE 2025', 'External Affairs | Logistics', 'zachary']
