--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@ description:
                 ['Johnny Luu', 'MCB 2024', 'Curriculum | Outreach', 'johnny'],
                 ['Kaitlyn Wang', '2024', 'Exec Head of Site Leading', 'white'],
                 ['Kayla Lowenberg', 'MechE 2026', 'Site Leading | Logistics', 'kayla'],
-                ['Kenneth Suhaili', '2023', 'Site Leading | Logisitcs', 'white'],
+                ['Kenneth Suhaili', '2023', 'Site Leading | Logisitcs', 'kenneth'],
                 ['Lucy Gleeson', 'ChemE 2024', 'Exec Head of Curriculum', 'lucy'],
                 ['Makenna Leung', 'Anthropology 2025', 'Site Leading | External Affairs', 'makenna'],
                 ['Marine Lyden', 'MCB + Public Policy 2025', 'Site Leading | Mentor Development', 'marine'],
