--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ description: Berkeley Engineers and Mentors
 	<a name="target"></a>
 	<section>
 		<div style = "font-size: 23px">
-		<p style = "margin-left: 28px">Our application has now been released and is due Friday, September 8th at NOON (11:59 AM PST)! Please apply <a href="https://tinyurl.com/f23BEAMapp">here</a></p>
+		<p style = "margin-left: 28px">Our application will be released here on Wednesday, January 24 and will close on Friday, January 26 at 11:59PM PST!</p>
 		</div>
 		<div class="container flex">
 			<div class="text editable">
@@ -67,7 +67,7 @@ description: Berkeley Engineers and Mentors
 			</div>
 			<div style="height:400px; width:40%; overflow:hidden; margin-left: 2%">
 				<iframe class="custom-google-map" style="position:relative; top:-50px; border:none;"
-					src="https://www.google.com/maps/d/u/0/embed?mid=1gi79jNNno8pdK5YS-TrusULzVXAYRLjC"
+					src="https://www.google.com/maps/d/embed?mid=13Ep3z_fh-GnEUqQ62pfCnjTwFK4Pprg&ehbc=2E312F"
 					width="What Ever Width" height="445"></iframe>
 			</div>
 
