changing width of map

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ description: Berkeley Engineers and Mentors
 			<div style="height:400px; width:40%; overflow:hidden; margin-left: 2%">
 				<iframe class="custom-google-map" style="position:relative; top:-50px; border:none;"
 					src="https://www.google.com/maps/d/embed?mid=13Ep3z_fh-GnEUqQ62pfCnjTwFK4Pprg&ehbc=2E312F"
-					width="What Ever Width" height="445"></iframe>
+					width="500" height="445"></iframe>
 			</div>
 
 		</div>
