added kaitlyn and safaa

--- a/about.html
+++ b/about.html
@@ -316,7 +316,7 @@ description:
                 ['Jacob Yim', 'Computer Science 2023', 'Site Leading | Curriculum', 'jacob'],
                 ['Jared Puerta', 'Computer Science 2024', 'President', 'jared'],
                 ['Johnny Luu', 'MCB 2024', 'Curriculum | Outreach', 'johnny'],
-                ['Kaitlyn Wang', '2024', 'Exec Head of Site Leading', 'white'],
+                ['Kaitlyn Wang', '2024', 'Exec Head of Site Leading', 'kaitlyn'],
                 ['Kayla Lowenberg', 'MechE 2026', 'Site Leading | Logistics', 'kayla'],
                 ['Kenneth Suhaili', '2023', 'Site Leading | Logisitcs', 'kenneth'],
                 ['Lucy Gleeson', 'ChemE 2024', 'Exec Head of Curriculum', 'lucy'],
@@ -331,7 +331,7 @@ description:
                 ['Patricia Suwardi', 'Data Science 2025', 'Curriculum | External Affairs', 'pattyice'],
                 ['Rebecca Bernstein', '2025', 'Curriculum | Outreach', 'rebecca'],
                 ['Rishi Yang', 'Computer Science 2024', 'Exec Head of Outreach', 'rishi'],
-                ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'white'],
+                ['Safaa Mouline', '2025', 'Exec Head of Curriculum', 'safaa'],
                 ['Shlok Rajurkar', 'Nutritional Science P&M 2025', 'External Affairs | Curriculum', 'shlok'],
                 ['Sunay Dagli', 'EECS 2023', 'External Affairs | Logistics', 'sunay'],
                 ['Surabhi Haniyur', '2024', 'President', 'surabhi'],
