--- a/join.html
+++ b/join.html
@@ -26,12 +26,12 @@ description:
        
           <p>
             For interested <strong>Spring 2024 mentors</strong>,
-            stop by at our infosession for application information!
+            stop by at our infosession for application information and advice!
           </p>
 
           <p>
-  					Our spring 2024 application will be released immediately
-            after our infosession!
+  					Our spring 2024 <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">application</a> is officially released! <br>
+            Our application is due on <strong>Friday, January 26th - 11:59 PM PST</strong>
           </p>
 
           <p>
