--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ description: Berkeley Engineers and Mentors
 	<a name="target"></a>
 	<section>
 		<div style = "font-size: 23px">
-		<p style = "margin-left: 28px">Our application will be released here on Wednesday, January 24 and will close on Friday, January 26 at 11:59PM PST!</p>
+		<p style = "margin-left: 28px">
+			Our spring 2024 application is officially released!
+			It is linked <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">here</a>
+			and will be due on <strong>Friday, January 26th - 11:59 PM PST</strong>!
+		</p>
 		</div>
 		<div class="container flex">
 			<div class="text editable">
