--- a/join.html
+++ b/join.html
@@ -43,7 +43,7 @@ description:
           <p> More details are available on our <a target=_blank
             href="https://www.facebook.com/beam.teach/">Facebook</a> and
             <a target=_blank href="https://www.instagram.com/beam_berkeley/?hl=en">Instagram</a>
-            page. Follow us or add your email in the form below to stay updated!
+            page. Follow us to stay updated!
           </p>
 
 
