--- a/join.html
+++ b/join.html
@@ -11,8 +11,8 @@ description:
 
 <section style="margin-bottom: 100px; padding-top: 90px; display: flex; margin-left: 10%">
   <div class="content" style="width: 60%; padding-right: 8%;">
-    <h2 style="font-size: 2.0em; text-align: left;">Joining BEAM is the perfect way to share your love for science
-      and engineering with the local community!
+    <h2 style="font-size: 2.0em; text-align: left;">Our spring 2024 <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">application</a> is officially released! <br>
+            Our application is due on Friday, January 26th - 11:59 PM PST
     </h2>
     <!-- Next 4 lines are for AFTER Aplication season -->
   <!--
@@ -25,13 +25,12 @@ description:
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
        
           <p>
-            For interested <strong>Spring 2024 mentors</strong>,
-            stop by at our infosession for application information and advice!
+            Joining BEAM is the perfect way to share your love for science and engineering with the local community!
           </p>
 
           <p>
-  					Our spring 2024 <a target=_blank href="https://forms.gle/hSWAgBwGWoPZjum46">application</a> is officially released! <br>
-            Our application is due on <strong>Friday, January 26th - 11:59 PM PST</strong>
+  					For interested <strong>Spring 2024 mentors</strong>,
+            stop by at our infosession for application information and advice!
           </p>
 
           <p>
