Update mentor experiences responses pt 1

--- a/join.html
+++ b/join.html
@@ -72,19 +72,23 @@ description:
         have you demonstrated those traits in your own mentoring? </h2>
       <!-- <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join1.png"></img> -->
       <p style="text-align: left;">
-        One hallmark of a good mentor is <b> being able to ask questions that spur students to realize the answer rather
-          than feeding them facts.</b> I would say I’m pretty good at that since a lot of the time my understanding is
-        not perfect, so it’s not always the easiest thing to explain without being confusing (especially bio and chem
-        modules). Instead, I ask them questions like “what do you think would happen if I do this” or “how do you think
-        this is affected by that” or “can someone give me an example of this”. Then, if I want to make sure that
-        everyone agrees, I’ll ask “who agrees with what he/she said.” If someone disagrees, then I’ll have them explain
-        their logic, and that way I can <b> understand the thought process of the mentees better. </b> I’m then better
-        equipped to give an example or another question to get everyone on the right page, and then I can generalize
-        whatever concept we’ve “discovered” to the teaching goal in the module.
+        One hallmark of a good mentor is <b>the ability to adapt ones teaching style in order to meet the learning 
+          needs of each individual student.</b> This means that a good mentor will utilize multiple techniques of 
+        teaching, allowing them to cater to the different needs that they think their students will respond the best 
+        to. While some students are able to absorb information well through lecturing, others are more visual learners. 
+        Some students may be more hands-on, while others are more kinesthetic learners. Understanding how our mentees 
+        learn and supporting them by teaching in a way that they will best respond to is so important, and BEAM has 
+        allowed mentors to learn this hallmark skill. I believe I have demonstrated this trait throughout my years in BEAM. 
+        If I notice certain students learn better visually or auditory, I use the opportunity to cater to their needs 
+        by going to them separately, or spending more time on a module that utilizes those teaching styles. Additionally, 
+        I have been able to modify the lesson so we use more of a certain style of teaching, as well as talk to each 
+        of my mentors and <b>encourage them to use a teaching technique that our students tend to respond better to. </b>
+        This hallmark trait of a good mentor is extremely important, and allows us as mentors to foster an inclusive 
+        learning environment for our students where they can thrive and enjoy learning!
       </p>
       <p style="text-align:left;">
         <i>
-          Ishan Gurnani, 3 semesters in BEAM
+          Hailey Adams, 5 spectacular semesters in BEAM
         </i>
       </p>
     </div>
@@ -133,21 +137,21 @@ description:
       <h2 style="font-size: 1.5em; text-align: left; "> What is one takeaway you have from this semester in BEAM? </h2>
       <!-- <img style="width:10vw; height:auto; position:absolute; margin:0px;"src="/images/icons/join4.png"></img> -->
       <p style="text-align: left;">
-        The biggest takeaway that I have from this semester in BEAM is that <b>I should definitely be more patient with
-          my failures and strive more for improvement rather than success the first time.</b> When I see the mentees in
-        my class, I see a lot of who I used to be. Many times in elementary and high school, when I encountered concepts
-        that I found to be too hard or too boring, I would lose interest in them, procrastinating assignments or even
-        refusing to do them. Now that I am in college, I have realized that more and more concepts will be difficult and
-        unfamiliar to me; however, repeating what I have done in the past when confronted with a challenge is a recipe
-        for failure. Going to site every week and watching students deal with concepts they have never learned before,
-        such as mechanics and computer science, has made me understand that <b> failing the first time I do something is
-          an opportunity to learn something new instead of a roadblock.</b> It has also taught me patience—both in terms
-        of patience with myself when learning new things, but also being patient with students who are struggling with
-        the material.
+        This semester in BEAM, <b>I learned how big of an impact we truly have as mentors for these mentees.</b> There was one 
+        mentee that really stood out to me, because I was able to see her skills and confidence skyrocket as the semester 
+        progressed. She was really shy and quiet at the beginning of the semester, and had a difficult time engaging with 
+        the other students. I tried helping her out by working with her one-on-one, asking her to help me out with certain 
+        tasks. I wanted to make her feel seen and heard during the lessons. As we reached the end of the semester, I feel 
+        like I really got to see her improvement. She started helping more with the activities and got more engaged. At one 
+        of our last sites, she even gave the mentors a hug, and I feel like she really became a lot more comfortable with us 
+        and with doing all the lessons. This interaction really made me realize <b>how important it is to make STEM accessible 
+        to all students,</b> especially those who are a bit more shy. As I continue to teach more mentees in BEAM, I want to 
+        make sure to always keep this experience in mind. That way, <b>I can continue my efforts to connect with mentees to 
+        help them improve their confidence in STEM. </b>
       </p>
       <p style="text-align:left;">
         <i>
-          Kyle Kishimoto, 1 semester in BEAM
+          Mira Chatrathi, 4 magnificent semesters in BEAM
         </i>
       </p>
     </div>
