--- a/faq.html
+++ b/faq.html
@@ -9,14 +9,14 @@ description:
 
 <div style="background-color: #ffffff; padding-top: 5vh; text-align: center;">
     <a name="ApplicationFAQ"></a>
-    <h2 style="font-size: 2.0em; ">Frequently Asked Questions about <i>Application</i></h2>
+    <h2 style="font-size: 2.0em; ">Application Guide</h2>
     <div style="width: 75%; display: inline-block;">
             <p style="text-align: center;">
-                We want you to write an amazing application, so we've put together a guide 
+                <i>We want you to write an amazing application, so we've put together a guide 
                 filled with what you should focus on when writing your responses. Remember, 
                 the best opportunity you'll have to learn more about BEAM and our 
                 application will stil be at our infosession, so don't forget to join us at 
-                <strong>Latimer 120 at 8:00 PM PST!</strong>
+                <strong>Latimer 120 at 8:00 PM PST!</strong></i>
             </p>
             
             <p style="text-align: left;"> <b>BEAM's Mission Statement is: To provide 
@@ -53,10 +53,8 @@ description:
             </p>
             
             <p style="text-align: left;"><b>What do you believe makes a great mentor?</b></p>
-            <div style="justify-content: space-around;">
-                <p><i>Last question - you're almost there!</i></p>
-                <p><i>200-300 words</i></p>
-            </div>
+            <span><i>Last question - you're almost there!</i></span>
+            <span><i>200-300 words</i></span>
             <p style="text-align: left;">
             We're not trying to trick you on this one - we really want to know what you think
             makes a great mentor! A common <strong>pitfall</strong> that we see in applications
@@ -68,8 +66,8 @@ description:
             </p>
 
             <p style="text-align: center;">
-                You did it! We hope that wasn't so bad. We're really excited to see the fantastic work you've put into your application,
-                and you should be proud for completing it! Decisions will be released on <strong>Sunday, January 28 at 8:00 AM PST.</strong>
+                <i>You did it! We hope that wasn't so bad. We're really excited to see the fantastic work you've put into your application,
+                and you should be proud for completing it! Decisions will be released on <strong>Sunday, January 28 at 8:00 AM PST.</strong></i>
             </p>
 
             <!-- <p style="text-align: left;"><b>How strict is the word count?</b></p>
